fixed overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -24,7 +24,7 @@ Acknowledgement:
 }
 
 body {
-    /* position: relative; */
+    overflow-x: hidden;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
